<resources xmlns:tools="http://schemas.android.com/tools" xmlns:moz="http://mozac.org/tools">
    <string name="mozac_feature_prompts_ok">OK</string>
    <string name="mozac_feature_prompts_cancel">Cancel</string>
    <string name="mozac_feature_prompts_no_more_dialogs">Prevent this page from creating additional dialogs</string>
    <string name="mozac_feature_prompts_set_date">Set</string>
    <string name="mozac_feature_prompts_clear">Clear</string>
    <string name="mozac_feature_prompt_sign_in">Sign in</string>
    <string name="mozac_feature_prompt_username_hint">Username</string>
    <string name="mozac_feature_prompt_password_hint">Password</string>
    <string name="mozac_feature_prompt_dont_save" moz:removedIn="125" tools:ignore="UnusedResources">Don’t save</string>
    <string name="mozac_feature_prompt_dont_save_2">Not now</string>
    <string name="mozac_feature_prompt_never_save">Never save</string>
    <string name="mozac_feature_prompt_not_now">Not now</string>
    <string name="mozac_feature_prompt_save_confirmation">Save</string>
    <string name="mozac_feature_prompt_dont_update" moz:removedIn="125" tools:ignore="UnusedResources">Don’t update</string>
    <string name="mozac_feature_prompt_dont_update_2">Not now</string>
    <string name="mozac_feature_prompt_update_confirmation">Update</string>
    <string name="mozac_feature_prompt_error_empty_password" moz:removedIn="125" tools:ignore="UnusedResources">Password field must not be empty</string>
    <string name="mozac_feature_prompt_error_empty_password_2">Enter a password</string>
    <string name="mozac_feature_prompt_error_unknown_cause" moz:removedIn="125" tools:ignore="UnusedResources">Unable to save login</string>
    <string name="mozac_feature_prompt_error_unknown_cause_2">Can’t save password</string>
    <string name="mozac_feature_prompt_login_save_headline" moz:removedIn="125" tools:ignore="UnusedResources">Save this login?</string>
    <string name="mozac_feature_prompt_login_save_headline_2">Save password?</string>
    <string name="mozac_feature_prompt_login_update_headline" moz:removedIn="125" tools:ignore="UnusedResources">Update this login?</string>
    <string name="mozac_feature_prompt_login_update_headline_2">Update password?</string>
    <string name="mozac_feature_prompt_login_add_username_headline">Add username to saved password?</string>
    <string name="mozac_feature_prompts_content_description_input_label">Label for entering a text input field</string>
    <string name="mozac_feature_prompts_choose_a_color">Choose a color</string>
    <string name="mozac_feature_prompts_allow">Allow</string>
    <string name="mozac_feature_prompts_deny">Deny</string>
    <string name="mozac_feature_prompt_before_unload_dialog_title">Are you sure?</string>
    <string name="mozac_feature_prompt_before_unload_dialog_body">Do you want to leave this site? Data you have entered may not be saved</string>
    <string name="mozac_feature_prompts_before_unload_stay">Stay</string>
    <string name="mozac_feature_prompts_before_unload_leave">Leave</string>
    <string name="mozac_feature_prompts_set_month">Pick a month</string>
    <string name="mozac_feature_prompts_jan">Jan</string>
    <string name="mozac_feature_prompts_feb">Feb</string>
    <string name="mozac_feature_prompts_mar">Mar</string>
    <string name="mozac_feature_prompts_apr">Apr</string>
    <string name="mozac_feature_prompts_may">May</string>
    <string name="mozac_feature_prompts_jun">Jun</string>
    <string name="mozac_feature_prompts_jul">Jul</string>
    <string name="mozac_feature_prompts_aug">Aug</string>
    <string name="mozac_feature_prompts_sep">Sep</string>
    <string name="mozac_feature_prompts_oct">Oct</string>
    <string name="mozac_feature_prompts_nov">Nov</string>
    <string name="mozac_feature_prompts_dec">Dec</string>
    <string name="mozac_feature_prompts_set_time">Set time</string>
    <string name="mozac_feature_prompts_manage_logins" moz:removedIn="125" tools:ignore="UnusedResources">Manage logins</string>
    <string name="mozac_feature_prompts_manage_logins_2">Manage passwords</string>
    <string name="mozac_feature_prompts_expand_logins_content_description" moz:removedIn="125" tools:ignore="UnusedResources">Expand suggested logins</string>
    <string name="mozac_feature_prompts_expand_logins_content_description_2">Expand saved passwords</string>
    <string name="mozac_feature_prompts_collapse_logins_content_description" moz:removedIn="125" tools:ignore="UnusedResources">Collapse suggested logins</string>
    <string name="mozac_feature_prompts_collapse_logins_content_description_2">Collapse saved passwords</string>
    <string name="mozac_feature_prompts_saved_logins" moz:removedIn="125" tools:ignore="UnusedResources">Suggested logins</string>
    <string name="mozac_feature_prompts_saved_logins_2">Saved passwords</string>
    <string name="mozac_feature_prompts_suggest_strong_password_content_description">Suggest strong password</string>
    <string name="mozac_feature_prompts_suggest_strong_password" moz:removedIn="128" tools:ignore="UnusedResources">Suggest strong password</string>
    <string name="mozac_feature_prompts_suggest_strong_password_2">Use strong password</string>
    <string name="mozac_feature_prompts_suggest_strong_password_message">Use strong password: %1$s</string>
    <string name="mozac_feature_prompts_suggest_strong_password_title">Use strong password?</string>
    <string name="mozac_feature_prompts_suggest_strong_password_description">Protect your accounts by using a strong, randomly generated password. Get quick access to your passwords by saving it in your account.</string>
    <string name="mozac_feature_prompts_suggest_strong_password_generated_password">%1$s</string>
    <string name="mozac_feature_prompts_suggest_strong_password_use_password">Use password</string>
    <string name="mozac_feature_prompts_suggest_strong_password_dismiss">Not now</string>
    <string name="mozac_feature_prompts_suggest_strong_password_saved_snackbar_title">Password saved</string>
    <string name="mozac_feature_prompts_suggest_strong_password_updated_snackbar_title">Password updated</string>
    <string name="mozac_feature_prompt_repost_title">Resend data to this site?</string>
    <string name="mozac_feature_prompt_repost_message">Refreshing this page could duplicate recent actions, such as sending a payment or posting a comment twice.</string>
    <string name="mozac_feature_prompt_repost_positive_button_text">Resend data</string>
    <string name="mozac_feature_prompt_repost_negative_button_text">Cancel</string>
    <string name="mozac_feature_prompts_select_credit_card" moz:removedIn="125" tools:ignore="UnusedResources">Select credit card</string>
    <string name="mozac_feature_prompts_select_credit_card_2">Use saved card</string>
    <string name="mozac_feature_prompts_expand_credit_cards_content_description" moz:removedIn="125" tools:ignore="UnusedResources">Expand suggested credit cards</string>
    <string name="mozac_feature_prompts_expand_credit_cards_content_description_2">Expand saved cards</string>
    <string name="mozac_feature_prompts_collapse_credit_cards_content_description" moz:removedIn="125" tools:ignore="UnusedResources">Collapse suggested credit cards</string>
    <string name="mozac_feature_prompts_collapse_credit_cards_content_description_2">Collapse saved cards</string>
    <string name="mozac_feature_prompts_manage_credit_cards" moz:removedIn="125" tools:ignore="UnusedResources">Manage credit cards</string>
    <string name="mozac_feature_prompts_manage_credit_cards_2">Manage cards</string>
    <string name="mozac_feature_prompts_save_credit_card_prompt_title">Securely save this card?</string>
    <string name="mozac_feature_prompts_update_credit_card_prompt_title">Update card expiration date?</string>
    <string name="mozac_feature_prompts_save_credit_card_prompt_body" moz:removedIn="125" tools:ignore="UnusedResources">Card number will be encrypted. Security code won’t be saved.</string>
    <string name="mozac_feature_prompts_save_credit_card_prompt_body_2">%s encrypts your card number. Your security code won’t be saved.</string>
    <string name="mozac_feature_prompts_select_address_2">Select address</string>
    <string name="mozac_feature_prompts_expand_address_content_description" moz:removedIn="125" tools:ignore="UnusedResources">Expand suggested addresses</string>
    <string name="mozac_feature_prompts_expand_address_content_description_2">Expand saved addresses</string>
    <string name="mozac_feature_prompts_collapse_address_content_description" moz:removedIn="125" tools:ignore="UnusedResources">Collapse suggested addresses</string>
    <string name="mozac_feature_prompts_collapse_address_content_description_2">Collapse saved addresses</string>
    <string name="mozac_feature_prompts_manage_address">Manage addresses</string>
    <string name="mozac_feature_prompts_account_picture">Account picture</string>
    <string name="mozac_feature_prompts_identity_credentials_choose_provider">Choose a login provider</string>
    <string name="mozac_feature_prompts_identity_credentials_choose_account_for_provider">Sign in with a %1$s account</string>
    <string name="mozac_feature_prompts_identity_credentials_privacy_policy_title">Use %1$s as a login provider</string>
    <string name="mozac_feature_prompts_identity_credentials_privacy_policy_description"><![CDATA[Logging in to %1$s with a %2$s account is subject to their <a href="%3$s">Privacy Policy</a> and <a href="%4$s">Terms of Service</a>]]></string>
    <string name="mozac_feature_prompts_identity_credentials_continue">Continue</string>
    <string name="mozac_feature_prompts_identity_credentials_cancel">Cancel</string>
</resources>