<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/suggest_strong_password_header"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/mozac_feature_prompts_suggest_strong_password_content_description"
            android:drawablePadding="24dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="56dp"
            android:text="@string/mozac_feature_prompts_suggest_strong_password"
            android:textColor="?android:colorEdgeEffect"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/mozac_ic_login_24"
            app:drawableTint="?android:colorEdgeEffect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/use_strong_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:drawablePadding="24dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:text="@string/mozac_feature_prompts_suggest_strong_password_message"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/mozac_ic_lock_24"
            app:drawableTint="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suggest_strong_password_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
