<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ScrollView
        android:id="@+id/login_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/saved_logins_header"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/mozac_feature_prompts_expand_logins_content_description"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="56dp"
                android:text="@string/mozac_feature_prompts_saved_logins"
                android:textColor="?android:colorEdgeEffect"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/mozac_ic_login"
                app:drawableTint="?android:colorEdgeEffect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mozac_feature_login_multiselect_expand"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="false"
                android:focusable="false"
                android:importantForAccessibility="no"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mozac_ic_arrowhead_down"
                app:tint="?android:colorEdgeEffect" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/logins_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/mozac_feature_login_multiselect_expand"
                tools:listitem="@layout/login_selection_list_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/manage_logins"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/mozac_feature_prompts_manage_logins"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/mozac_ic_settings"
                app:drawableTint="?android:textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logins_list" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</merge>
